--- a/etiqa-test/build.gradle
+++ b/etiqa-test/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.springframework.boot:spring-boot-starter-logging'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 
