--- a/etiqa-test/src/main/resources/application.properties
+++ b/etiqa-test/src/main/resources/application.properties
@@ -7,5 +7,22 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework=INFO
-logging.level.com.example=DEBUG
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+springfox.documentation.swagger-ui.enabled=true
+
+# Thymeleaf properties
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+
+# Logging properties
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.com.example=DEBUG
+
+# Server port
+server.port=8080
